[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/passenger0.png" type="Texture" id=1]
[ext_resource path="res://Passenger/Passenger.gd" type="Script" id=2]
[ext_resource path="res://montserrat_extrabold.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 14
outline_size = 2
outline_color = Color( 0.266667, 0.192157, 0.2, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "AppearIn"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1.1, 1.1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeOut"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "clear_passenger"
} ]
}

[node name="Passenger" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="EnteringTween" type="Tween" parent="."]

[node name="ExitingTween" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -12.7226
margin_top = -29.3427
margin_right = 13.2774
margin_bottom = -11.3427
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AppearIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )

[node name="SlidingTween" type="Tween" parent="."]
[connection signal="tween_completed" from="EnteringTween" to="." method="_on_EnteringTween_tween_completed"]
[connection signal="tween_completed" from="ExitingTween" to="." method="_on_ExitingTween_tween_completed"]
[connection signal="tween_completed" from="SlidingTween" to="." method="_on_SlidingTween_tween_completed"]
